[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-radar"
version = "0.1.0"
description = "Phase 1 skeleton for a public-data-only catalyst radar"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "private" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
